<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kellyjohanazapataestrada.forcegym.RegistroActivity">
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login2"
            android:layout_weight="2.22">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:weightSum="1">
                <ImageView
                    android:layout_width="200sp"
                    android:layout_height="200sp"
                    android:id="@+id/imageView"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/imageregister" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:weightSum="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTextoRegistro"
                    android:textAlignment="center"
                    android:textSize="25dp"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="15sp"
                    android:textColor="@color/midnightblue"
                    android:textStyle="bold"
                    android:layout_gravity="right" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtUser"
                    android:hint="@string/txtUser"
                    android:textAlignment="center"
                    android:textColorHint="@color/black"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_gravity="right" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:inputType="textPassword"
                    android:hint="@string/txtPass2"
                    android:textStyle="bold"
                    android:id="@+id/txtPass"
                    android:layout_gravity="right" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/txtRePass"
                    android:textStyle="bold"
                    android:id="@+id/txtRePass"
                    android:layout_gravity="right" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="@string/txtEmail"
                    android:textStyle="bold"
                    android:id="@+id/txtEmail"
                    android:inputType="textWebEmailAddress"
                    android:layout_gravity="right" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="@string/txtEstatura"
                    android:inputType="numberDecimal"
                    android:textStyle="bold"
                    android:id="@+id/txtEstatura"
                    android:layout_gravity="right" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:hint="@string/txtPeso"
                    android:inputType="numberDecimal"
                    android:textStyle="bold"
                    android:id="@+id/txtPeso"
                    android:layout_gravity="right" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:weightSum="1">
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/btnSign"
                    android:id="@+id/btnSign"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20dp"
                    android:drawableLeft="@drawable/iconregister2"
                    android:drawablePadding="8dp"
                    android:backgroundTint="@color/limegreen"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
