<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.kellyjohanazapataestrada.forcegym.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login2"
        android:layout_weight="2.22"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:weightSum="1">
            <ImageView
                android:layout_width="200sp"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:weightSum="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtSlogan"
                android:textAlignment="center"
                android:textSize="25dp"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="15sp"
                android:textColor="@color/midnightblue"
                android:textStyle="bold"
                android:layout_gravity="right" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLogin"
                android:hint="@string/txtUser"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColorHint="@color/black"
                android:layout_gravity="right" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:textSize="20dp"
                android:hint="@string/txtPassword"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:id="@+id/txtPass"
                android:layout_gravity="right" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15">
            <LinearLayout
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_weight="0.5"
                android:layout_height="match_parent">
                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/btnIngresar"
                    android:textSize="20dp"
                    android:id="@+id/btnIngresar"
                    android:drawableLeft="@drawable/iconlogin"
                    android:drawablePadding="8dp"
                    android:backgroundTint="@color/mediumslateblue"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/btnRegistro"
                    android:textAlignment="center"
                    android:id="@+id/btnRegistro"
                    android:drawableLeft="@drawable/iconregister"
                    android:drawablePadding="8dp"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    android:backgroundTint="@color/limegreen"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
